# the-round-table

./: .dockerignore  Dockerfile  Makefile  README.md  cabal.project  the-round-table.cabal
docs/: lancelot.md
src/: Main.hs
src/Engine/: Game.hs  Helpers.hs  State.hs
src/Interface/: Bulma.hs  Index.hs  Types.hs
src/Interface/Game/: Handler.hs  Render.hs
src/Interface/Game/Board/: Render.hs
src/Interface/Game/Config/: Render.hs
src/Interface/Game/Core/: Handler.hs  Render.hs
src/Interface/Gamemaster/: Handler.hs  Render.hs
src/Interface/Gamemaster/Board/: Render.hs
src/Interface/Gamemaster/Config/: Render.hs
src/Interface/Init/: Handler.hs  Render.hs
src/Interface/Room/: Handler.hs  Render.hs
